k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iaemp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iaemp-backend
  template:
    metadata:
      labels:
        app: iaemp-backend
    spec:
      containers:
        - name: backend
          image: iaemp-backend-ci
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          # ===============================
          # HEALTH PROBES
          
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
